[package]
name = "advent2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bumpalo = { version = "3.14.0", features = ["collections"] }
clap = { version = "4.4.10", features = ["derive"] }
indextree = "4.6.1"
itertools = "0.12.0"
lazy_static = "1.4.0"
nom = "7.1.3"
num = "0.4.1"
num-traits = "0.2.19"
petgraph = "0.6.4"
rangetools = "0.1.4"
rayon = "1.8.0"
regex = "1.10.2"
slotmap = "1.0.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
debug = true

